fixes https://github.com/bhuism/pseudoniemenservice/issues/38
